<resources>
    <string name="app_name">core-ui</string>
    <string name="default_text_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="default_url_placeholder">https://humanparts.medium.com/how-i-overcame-cult-trauma-with-psychedelics-4342c03a074c</string>
    <string name="multi_select_turn_into">Turn into</string>
    <string name="multi_select_move_to">Move to</string>
    <string name="content_description_add_block">Add block button</string>
    <string name="content_description_hide_keyboard_button">Hide keyboard button</string>
    <string name="content_description_show_actions">Show actions</string>
    <string name="content_description_show_colors">Show colors</string>
    <string name="content_description_bold_text">Bold text</string>
    <string name="content_description_italic_text">Italic text</string>
    <string name="content_description_strike_through_text">Strike-through text</string>
    <string name="content_description_link">Link</string>
    <string name="content_description_code">Code</string>
    <string name="content_description_option_picture">Option picture</string>
    <string name="content_description_action_picture">Action picture</string>
    <string name="content_description_checkbox_pic">Checkbox pic</string>
    <string name="content_description_task_pic">Task pic</string>
    <string name="content_description_page_icon">Page icon</string>
    <string name="content_description_more_button">More button</string>
    <string name="content_description_avatar_image">Avatar image</string>
    <string name="content_description_bookmark_image">Bookmark image</string>
    <string name="content_description_filter_remove">Remove filter</string>
    <string name="content_description_filter_format">Filter format</string>
    <string name="content_description_qr_image">QR code</string>
    <string name="content_description_toggle_icon">Toggle icon</string>
    <string name="content_description_turn_into_arrow">Turn into arrow</string>
    <string name="content_description_document_previous_search_result_icon">Document previous search result icon</string>
    <string name="content_description_document_next_search_result_icon">Document next search result icon</string>
    <string name="content_description_document_search_icon">Document search icon</string>
    <string name="content_description_document_clear_search_icon">Document clear search icon</string>
    <string name="option_toolbar_header_turn_into">Turn into</string>
    <string name="option_toolbar_header_add_block">Add block</string>
    <string name="option_text_text">Text</string>
    <string name="option_text_header_one">Header 1</string>
    <string name="option_text_header_two">Header 2</string>
    <string name="option_text_header_three">Header 3</string>
    <string name="option_text_highlighted">Highlighted</string>
    <string name="option_list_checkbox">Checkbox</string>
    <string name="option_list_bulleted_list">Bulleted list</string>
    <string name="option_list_numbered_list">Numbered list</string>
    <string name="option_list_toggle_list">Toggle list</string>
    <string name="option_tool_task">Task</string>
    <string name="option_tool_page">Page</string>
    <string name="option_tool_link_to_object">Link to object</string>
    <string name="option_tool_database">Database</string>
    <string name="option_tool_set">Set</string>
    <string name="option_tool_contact">Contact</string>
    <string name="option_tool_existing_tool">Existing Tool</string>
    <string name="option_media_file">File</string>
    <string name="option_media_picture">Picture</string>
    <string name="option_media_video">Video</string>
    <string name="option_media_bookmark">Bookmark</string>
    <string name="option_other_divider">Line divider</string>
    <string name="option_other_dots">Dots divider</string>
    <string name="option_other_code">Code snippet</string>
    <string name="option_relation_relation">Relation</string>
    <string name="add_block_or_turn_into_subtitle_text">Write a plain text</string>
    <string name="add_block_or_turn_into_subtitle_header_one">Big headline of a chapter, paragraph or section</string>
    <string name="add_block_or_turn_into_subtitle_header_two">Medium headline</string>
    <string name="add_block_or_turn_into_subtitle_header_three">Small headline</string>
    <string name="add_block_or_turn_into_subtitle_highlighted">Spotlight what needs special attention</string>
    <string name="add_block_or_turn_into_subtitle_checkbox">Create and track task with to-do list</string>
    <string name="add_block_or_turn_into_subtitle_bulleted">Simple list</string>
    <string name="add_block_or_turn_into_subtitle_numbered">Numbered list</string>
    <string name="add_block_or_turn_into_subtitle_toggle">Hide and show content inside</string>
    <string name="add_block_or_turn_into_subtitle_page">Create new page inside this one</string>
    <string name="add_block_or_turn_into_subtitle_existing_page">Link existing page with this one</string>
    <string name="add_block_or_turn_into_subtitle_file">Store file in original state</string>
    <string name="add_block_or_turn_into_subtitle_image">Upload and enrich the page with image</string>
    <string name="add_block_or_turn_into_subtitle_video">Upload playable video</string>
    <string name="add_block_or_turn_into_subtitle_bookmark">Save your favorite link with summary</string>
    <string name="add_block_or_turn_into_subtitle_code">Capture code snippet</string>
    <string name="add_block_or_turn_into_subtitle_line_divider">Separate information with line</string>
    <string name="add_block_or_turn_into_subtitle_dots">Separate information with three dots</string>
    <string name="add_block_or_turn_into_subtitle_relation">Meaningful connection between objects</string>
    <string name="toolbar_section_text">Text</string>
    <string name="toolbar_section_list">List</string>
    <string name="toolbar_section_page">Page</string>
    <string name="toolbar_section_other">Other</string>
    <string name="toolbar_section_tool">Tool</string>
    <string name="toolbar_section_media">Media</string>
    <string name="toolbar_section_objects">Objects</string>
    <string name="toolbar_section_relation">Relation</string>
    <string name="toolbar_action_delete">Delete</string>
    <string name="toolbar_action_duplicate">Duplicate</string>
    <string name="toolbar_action_mention">Mention</string>
    <string name="toolbar_action_share">Share</string>
    <string name="actions">Actions</string>
    <string name="toolbar_text_color_placeholder">Aa</string>
    <string name="text_color">Text color</string>
    <string name="background_color">Background color</string>
    <string name="content_description_bookmark_logo">Bookmark logo</string>
    <string name="content_description_file_icon">File icon</string>
    <string name="content_description_modal_icon">Modal icon</string>
    <string name="modal_tap_to_type">Tap to type</string>
    <string name="modal_gallery">Gallery</string>
    <string name="modal_kanban">Kanban</string>
    <string name="modal_table">Table</string>
    <string name="modal_list">List</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="add">Add</string>
    <string name="duplicate">Duplicate</string>
    <string name="customize_view">Customize view</string>
    <string name="kanban_view">Kanban view</string>
    <string name="properties">Properties</string>
    <string name="sort">Sort</string>
    <string name="sort_empty_state">No sorts here. You can add some</string>
    <string name="filter_empty_state">No filters here. You can add some</string>
    <string name="relation_status_value_empty_state">No related options here. You can add some</string>
    <string name="filter_by">Filter by</string>
    <string name="filter">Filter</string>
    <string name="modal_view">View</string>
    <string name="modal_properties">Properties</string>
    <string name="detail_title">Title</string>
    <string name="detail_text">Text</string>
    <string name="detail_select">Select</string>
    <string name="detail_person">Person</string>
    <string name="detail_email">Email</string>
    <string name="detail_number">Number</string>
    <string name="detail_multiple">Multiple select</string>
    <string name="detail_date">Date</string>
    <string name="detail_file">File and Media</string>
    <string name="detail_checkbox">Checkbox</string>
    <string name="detail_url">URL</string>
    <string name="detail_phone">Phone</string>
    <string name="add_new">Add new</string>
    <string name="turn_into">Turn into</string>
    <string name="modal_reorder">Reorder</string>
    <string name="modal_done">Done</string>
    <string name="modal_prop_name">Property name</string>
    <string name="modal_property_type">Property type</string>
    <string name="modal_hide">Hide</string>
    <string name="modal_show">Show</string>
    <string name="modal_view_name">View name</string>
    <string name="modal_details">Details</string>
    <string name="modal_detail_name">Detail name</string>
    <string name="modal_detail_type">Detail type</string>
    <string name="hint_title">Title</string>
    <string name="hint_profile_title">Name Surname</string>
    <string name="hint_paragraph">Paragraph</string>
    <string name="hint_header_one">Title</string>
    <string name="hint_quote">Quote</string>
    <string name="hint_header_two">Heading</string>
    <string name="hint_header_three">Subheading</string>
    <string name="hint_checkbox">Checkbox</string>
    <string name="hint_video">Enter video URL</string>
    <string name="hint_upload_video">Upload a video</string>
    <string name="hint_upload_image">Upload a picture</string>
    <string name="hint_upload_file">Upload a file</string>
    <string name="hint_upload_audio">Upload an audio</string>
    <string name="hint_add_a_web_bookmark">Add a web bookmark</string>
    <string name="hint_bullet">Bulleted list item</string>
    <string name="hint_numbered_list">Numbered list item</string>
    <string name="hint_toggle">Toggle block</string>
    <string name="hint_empty">Empty</string>
    <string name="hint_paste_link">Paste link</string>
    <string name="empty_tap_to_create_new_block">Empty. Tap to create a new block</string>
    <string name="untitled">Untitled</string>
    <string name="untitled_set">Untitled set</string>
    <string name="untitled_collection">Untitled collection</string>
    <string name="archived">Archived</string>
    <string name="loading">Loading…</string>
    <string name="loading_wait">Loading, please wait</string>
    <string name="loading_file">Loading file, please wait</string>
    <string name="error_while_loading">Error while loading</string>
    <string name="menu_item_bold">Bold</string>
    <string name="menu_item_italic">Italic</string>
    <string name="menu_item_strike">Strike</string>
    <string name="menu_item_code">Code</string>
    <string name="menu_item_link">Link</string>
    <string name="style">Style</string>
    <string name="color">Color</string>
    <string name="background">Background</string>
    <string name="content_description_close_button">Close button</string>
    <string name="done">Done</string>
    <string name="logo_transition">logo_transition</string>
    <string name="your_search_query">Search</string>
    <string name="content_description_document_cover">Document\'s cover</string>
</resources>