<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#DFDDD0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/blockStyle"
        style="@style/StyleToolbarTabStyle"
        android:text="@string/style"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintEnd_toStartOf="@+id/blockColor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/close" />

    <TextView
        android:id="@+id/blockColor"
        style="@style/StyleToolbarTabStyle"
        android:text="@string/color"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintEnd_toStartOf="@+id/blockBackground"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blockStyle"
        app:layout_constraintTop_toTopOf="@+id/close" />

    <TextView
        android:id="@+id/blockBackground"
        style="@style/StyleToolbarTabStyle"
        android:text="@string/background"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/blockColor"
        app:layout_constraintTop_toTopOf="@+id/close" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_description_close_button"
        android:src="@drawable/ic_close_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close" />

</merge>