<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_cover_height"
            android:contentDescription="@string/content_description_document_cover"
            android:scaleType="centerCrop"
            android:visibility="gone"
            tools:background="@color/orange"
            tools:visibility="gone" />

        <com.anytypeio.anytype.core_ui.widgets.ObjectIconWidget
            android:id="@+id/objectIconWidget"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:transitionName="@string/logo_transition"
            app:emojiContainerBackground="true"
            app:emojiSize="48dp"
            app:imageCornerRadius="12dp"
            app:imageSize="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <com.anytypeio.anytype.core_ui.widgets.text.TextInputWidget
        android:id="@+id/title"
        style="@style/BlockTitleContentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/untitled"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:ignoreDragAndDrop="true"
        app:onlyPasteAsPlaneText="true"
        tools:text="Title" />
</LinearLayout>